# MAGICAL

./: .gitignore  .gitmodules  Dockerfile  Include.mk  LICENSE  Makefile  README.md  build.sh  requirements.txt
ConstGen/: CMakeLists.txt  README.md  SFA.sh  setup.py
ConstGen/src/api/: ConstGenAPI.cpp  DefParseApi.cpp  GlobalApi.cpp  api.cpp
ConstGen/src/db/: Bias.h  Inst.h  Net.h  NetPair.h  Netlist.cpp  Netlist.h  Pin.h
ConstGen/src/main/: ConstGen.h  DefParse.h  main.cpp
ConstGen/src/parser/: DefDataBase.h  InitNetlist.cpp  InitNetlist.h
ConstGen/src/sym_detect/: Pattern.cpp  Pattern.h  SymDetect.cpp  SymDetect.h
IdeaPlaceEx/: .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md
IdeaPlaceEx/docs/: Doxyfile
IdeaPlaceEx/src/api/: IdeaPlaceExAPI.cpp  api.cpp
IdeaPlaceEx/src/db/: Cell.h  Constraints.h  Database.cpp  Database.h  Net.h  Parameters.cpp  Parameters.h  Pin.h  Tech.h
IdeaPlaceEx/src/global/: constant.h  define.h  global.h  namespace.h  parameter.h  type.h
IdeaPlaceEx/src/main/: IdeaPlaceEx.cpp  IdeaPlaceEx.h  main.cpp
IdeaPlaceEx/src/parser/: ParserConnection.cpp  ParserGds.h  ParserPin.cpp  ParserPin.h  ParserSignalPath.cpp  ParserSignalPath.h  ParserSymFile.cpp  ParserSymNet.cpp  ParserSymNet.h  ProgArgs.cpp  ProgArgs.h
IdeaPlaceEx/src/pinassign/: VirtualPinAssigner.cpp  VirtualPinAssigner.h
IdeaPlaceEx/src/place/: CGLegalizer.cpp  CGLegalizer.h  ConstraintGraph.h  LpLegalizeSolver.cpp  NlpGPlacer.cpp  NlpGPlacer.h  NlpWnconj.cpp  NlpWnconj.h  ProximityMgr.cpp  ProximityMgr.h  alignGrid.cpp  alignGrid.h  constraintGraphGeneration.cpp  constraintGraphGeneration.h  different.h  differentSecondOrder.hpp  signalPathMgr.cpp  signalPathMgr.h
IdeaPlaceEx/src/place/nlp/: nlpFirstOrderKernel.hpp  nlpInitPlace.hpp  nlpOptmKernels.hpp  nlpOuterOptm.hpp  nlpSecondOrderKernels.hpp  nlpTasks.hpp  nlpTypes.hpp
IdeaPlaceEx/src/util/: Box.h  GdsHelper.h  MsgPrinter.h  Polygon2Rect.h  StopWatch.cpp  StopWatch.hpp  Vector2D.h  kLibBase.h  linear_programming.h  linear_programming_trait.h
IdeaPlaceEx/src/writer/gdsii/: WriteGds.cpp  WriteGds.h
anaroute/: .gitignore  CMakeLists.txt  README.md  setup.py
anaroute/src/acs/: acsMgr.cpp  acsMgr.hpp
anaroute/src/api/: apiPy.cpp
anaroute/src/db/: dbBlk.hpp  dbCir.cpp  dbCir.hpp  dbLef.cpp  dbLef.hpp  dbNet.cpp  dbNet.hpp  dbPin.cpp  dbPin.hpp  dbTechfile.hpp
anaroute/src/db/lef/: lefLayers.hpp  lefSite.cpp  lefVia.cpp  lefVia.hpp  lefViaImpl.cpp  lefViaImpl.hpp  lefViaRule.cpp  lefViaRule.hpp
anaroute/src/db/lef/layer/: lefCutLayer.cpp  lefLayerBase.hpp  lefMastersliceLayer.hpp  lefRoutingLayer.cpp  lefRoutingLayer.hpp
anaroute/src/db/net/: netBase.hpp  netNode.hpp  netNodeWire.hpp
anaroute/src/dr/: drAstar.cpp  drAstar.hpp  drAstarNode.hpp  drGridAstar.cpp  drGridAstar.hpp  drGridAstarNode.hpp  drGridRoute.cpp  drGridRoute.hpp  drGridlessRoute.cpp  drGridlessRoute.hpp  drMgr.cpp  drMgr.hpp  drPower.cpp  drPower.hpp  drRoutable.cpp  drRoutable.hpp  drSymmetry.cpp  drSymmetry.hpp  drViaSelector.cpp
anaroute/src/drc/: drcMgr.cpp  drcMgr.hpp
anaroute/src/ds/: hash.hpp  pqueue.hpp
anaroute/src/geo/: box.hpp  box2polygon.hpp  geometry.hpp  interval.hpp  intervaltree.hpp  kdtree.hpp  point.hpp  point3d.hpp  polygon.hpp  segment.hpp  segment3d.hpp  spatial.hpp
anaroute/src/global/: define.hpp  global.hpp  param.hpp  type.hpp
anaroute/src/gr/: grAstar.hpp  grGridMap3d.hpp  grMgr.cpp
anaroute/src/graph/: bipartite.hpp  matching.hpp  mst.hpp
anaroute/src/main/: anaroute.cpp  anaroute.hpp  main.cpp
anaroute/src/parser/: parGds.cpp  parGds.hpp  parIOPin.hpp  parIspd08.cpp  parLef.cpp  parLef.hpp  parNetSpec.cpp  parNetSpec.hpp  parNetlist.cpp  parNetlist.hpp  parPower.cpp  parPower.hpp  parSymNet.hpp  parTech.cpp  parser.cpp  parser.hpp
anaroute/src/post/: postMgr.cpp  postMgr.hpp
anaroute/src/ta/: taMgr.cpp  taMgr.hpp
anaroute/src/util/: MsgPrinter.cpp  MsgPrinter.h  Vector2D.h  timeUsage.cpp  util.cpp  util.hpp
anaroute/src/writer/: wrDumb.cpp  wrGds.cpp  wrGds.hpp  wrGrGuide.cpp  wrGrGuide.hpp  wrLayout.hpp  writer.cpp  writer.hpp
constraint_generation/signal_flow_analysis/: .gitignore  CMakeLists.txt  SFA.sh  doxygen.config
constraint_generation/signal_flow_analysis/src/db/: Bias.cpp  Bias.h  Inst.h  MosPair.cpp  MosPair.h  Net.cpp  Net.h  NetPair.h  Netlist.cpp  Netlist.h  Pin.cpp  Pin.h
constraint_generation/signal_flow_analysis/src/global/: global.h  namespace.h  type.h
constraint_generation/signal_flow_analysis/src/main/: main.cpp
constraint_generation/signal_flow_analysis/src/parser/: InitNetlist.cpp  InitNetlist.h
constraint_generation/signal_flow_analysis/src/sym_detect/: Pattern.cpp  Pattern.h  SymDetect.cpp  SymDetect.h
flow/cpp/magical_flow/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  setup.py
flow/cpp/magical_flow/src/api/: CSFlowAPI.cpp  CktGraphAPI.cpp  (+12 more)
placement/well_generation/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
placement/well_generation/cpp/: Legalize.cpp  Legalize.h  WellGen.cpp  WellGen.h
placement/well_generation/docs/: Doxyfile
placement/well_generation/python/: combine_results.py  legalize.py  parser_v2.py
placement/well_generation/test/: run.sh
router/anaroute/: CMakeLists.txt
router/anaroute/src/db/: dbBlk.hpp  dbCir.cpp  dbNet.hpp  dbPin.cpp  dbTechfile.cpp
router/anaroute/src/dr/: drGridlessRoute.hpp  drMgr.cpp  drViaSelector.hpp
router/anaroute/src/drc/: drcMgr.cpp
router/anaroute/src/ds/: disjointSet.hpp  pqueue.hpp  tree.hpp
router/anaroute/src/geo/: box.hpp  polygon2box.hpp  segment.hpp  spatial3d.hpp
router/anaroute/src/global/: namespace.hpp  type.hpp
router/anaroute/src/gr/: grAstar.cpp  grAstarNode.hpp  grGridCell.hpp  grGridEdge.hpp  grGridMap2d.hpp  grGridRoute.cpp  grGridRoute.hpp  grMgr.hpp
router/anaroute/src/parser/: parGds.cpp  parGds.hpp  parIOPin.cpp  parIspd08.hpp  parSymNet.cpp  parTech.hpp  parser.cpp
router/anaroute/src/util/: timeUsage.hpp
router/anaroute/src/writer/: wrDumb.hpp  wrGrGuide.cpp  wrGrGuide.hpp  wrLayout.cpp  writer.cpp  writer.hpp
(+542 files in other folders)
